add font Kupibilet demiBold

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,31 +1,28 @@
 <style>
   @font-face {
-    font-family: 'KB Suisse Intl';
+    font-family: "KB Suisse Intl";
     font-weight: 400;
     font-style: normal;
     font-stretch: normal;
-    src:
-      url('/fonts/SuisseIntl-Regular-WebM.woff2') format('woff2'),
-      url('/fonts/SuisseIntl-Regular-WebM.woff') format('woff');
+    src: url("/fonts/SuisseIntl-Regular-WebM.woff2") format("woff2"),
+      url("/fonts/SuisseIntl-Regular-WebM.woff") format("woff");
   }
 
   @font-face {
-    font-family: 'KB Suisse Intl';
+    font-family: "KB Suisse Intl";
     font-weight: 500;
     font-style: normal;
     font-stretch: normal;
-    src:
-      url('/fonts/SuisseIntl-Medium-WebM.woff2') format('woff2'),
-      url('/fonts/SuisseIntl-Medium-WebM.woff') format('woff');
+    src: url("/fonts/SuisseIntl-Medium-WebM.woff2") format("woff2"),
+      url("/fonts/SuisseIntl-Medium-WebM.woff") format("woff");
   }
 
   @font-face {
-    font-family: 'KB Suisse Intl';
+    font-family: "Kupibilet_DemiBold";
     font-weight: 600;
     font-style: normal;
     font-stretch: normal;
-    src:
-      url('/fonts/SuisseIntl-SemiBold-WebM.woff2') format('woff2'),
-      url('/fonts/SuisseIntl-SemiBold-WebM.woff') format('woff');
+    src: url("/fonts/kupibilet_DemiBold.woff2") format("woff2"),
+      url("/fonts/kupibilet_DemiBold.woff") format("woff");
   }
 </style>
