--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,6 +1,6 @@
 <style>
   @font-face {
-    font-family: "KB Suisse Intl";
+    font-family: "SuisseIntl-Regular";
     font-weight: 400;
     font-style: normal;
     font-stretch: normal;
@@ -9,7 +9,7 @@
   }
 
   @font-face {
-    font-family: "KB Suisse Intl";
+    font-family: "SuisseIntl-Medium";
     font-weight: 500;
     font-style: normal;
     font-stretch: normal;
